--- a/styles/components/_brands.scss
+++ b/styles/components/_brands.scss
@@ -1,5 +1,9 @@
 .brands {
   background: linear-gradient(226.84deg, #134574 16.01%, #10ae73 100%);
+  height: 300px;
+  display: flex;
+  align-items: center;
+  // padding: 75px 0px;
 
   &__container {
     position: relative;
@@ -13,38 +17,54 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
-    font-size: 3.5rem;
-    line-height: 4.2rem;
+    font-size: 35px;
+    line-height: 3.8rem;
     color: #ffffff;
+    margin-right: 6rem;
   }
 
   &__swiper {
-    height: 50%;
-    width: 80%;
+    height: 300px;
     padding: 0 3.5rem;
+    & .swiper-wrapper {
+      align-items: center;
+    }
   }
 
   &__btn-next {
     position: absolute;
     right: 0;
     color: #fff;
+    &::after {
+      font-size: 30px;
+      font-weight: bold;
+    }
   }
 
   &__btn-prev {
     position: absolute;
     left: 0;
     color: #fff;
+    &::after {
+      font-size: 30px;
+      font-weight: bold;
+    }
   }
 
   &__img {
-    transition: transform 0.5s linear;
+    transition: all 0.5s linear;
     overflow: hidden;
-    min-height: 10rem;
     padding: 1.3rem;
     cursor: pointer;
+    height: 125px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    border-radius: 10px;
 
     &:hover {
-      transform: scale(1.05);
+      height: 155px;
     }
   }
 }
@@ -52,12 +72,19 @@
 @media screen and(max-width: 1100px) {
   .brands {
     &__container {
-      display: block;
+      // display: block;
+      flex-direction: column;
       padding-bottom: 4rem;
+      gap: 30px;
+      align-items: baseline;
     }
 
     &__title {
       margin: 20px 0 10px 0;
+    }
+    &__swiper {
+      width: 100%;
+      height: auto;
     }
 
     &__btn-next {
@@ -78,6 +105,7 @@
 
 @media screen and(max-width: 480px) {
   .brands {
+    height: 210px;
     &__container {
       display: flex;
       flex-direction: column;
@@ -86,6 +114,7 @@
     }
 
     &__title {
+      font-size: 18px;
       margin: 10px 0 10px 0;
     }
 
@@ -93,6 +122,9 @@
       width: 100%;
       margin-bottom: 15px;
       padding: 0 8rem;
+      & .swiper-wrapper {
+        // height: 210px;
+      }
     }
 
     &__btn-next::after,
@@ -102,6 +134,10 @@
 
     &__img {
       padding: 0rem;
+      height: 80px;
+      & img {
+        width: 100%;
+      }
     }
   }
 }
