--- a/styles/components/_main-container.scss
+++ b/styles/components/_main-container.scss
@@ -14,6 +14,7 @@ main {
 @media screen and(max-width: 1100px) {
   .container-main {
     padding: 0 15px;
+    max-width: 768px;
   }
 
   .container {
