fix: dropdown size

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -43,7 +43,9 @@
         flex-direction: column;
         justify-content: center;
         width: 30rem;
-        height: 30rem;
+        min-height: 30rem;
+        justify-content: end;
+        gap: 1rem;
         opacity: 0;
         transition: all 0.5s ease 0s;
     }
