--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -35,7 +35,8 @@
         transform: translateY(-100%);
         backdrop-filter: blur(3px);
         width: 37.4rem;
-        height: 40rem;
+        min-height: 40rem;
+        padding-bottom: 3rem;
     }
 
     &__body {
@@ -44,7 +45,7 @@
         justify-content: center;
         width: 30rem;
         min-height: 30rem;
-        justify-content: end;
+        padding-top: 35%;
         gap: 1rem;
         opacity: 0;
         transition: all 0.5s ease 0s;
