--- a/styles/components/_wrapper.scss
+++ b/styles/components/_wrapper.scss
@@ -2,7 +2,7 @@
 	font-family: 'Nunito', sans-serif;
 }
 .wrapper {
-	@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;500&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
