fix: responsive search input

--- a/styles/components/_search.scss
+++ b/styles/components/_search.scss
@@ -16,7 +16,7 @@
     }
     font: caption;
     font-weight: 200;
-    width: 60rem;
+    width: 100%;
     height: 50px;
     border-radius: 25px;
     background-color: rgb(240, 241, 245);
