--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -60,6 +60,7 @@
     //   display: block;
     //   width: 85%;
     // }
+    flex: 1;
   }
 
   &__top {
@@ -68,6 +69,7 @@
     justify-content: space-between;
     width: 100%;
     min-height: 10rem;
+    gap: 3%;
   }
 
   &__icons-buttons {
@@ -91,7 +93,7 @@
     gap: 14%;
   }
   &__tel {
-    margin: 0 5.5rem;
+    // margin: 0 5.5rem;
   }
 }
 
