--- a/styles/components/_cards-block.scss
+++ b/styles/components/_cards-block.scss
@@ -1,5 +1,6 @@
 .cards-block {
-
+  flex: 1;
+  width: 100%;
   &__header {
     display: flex;
     min-height: 12rem;
@@ -75,7 +76,7 @@
 
   &__main {
     display: grid;
-    grid-template-columns: repeat(3, 300px);
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 32px;
     row-gap: 47px;
 
@@ -176,7 +177,6 @@
 
 @media screen and(min-width:1100px){
   .cards-block{
-    width: 964px;
   }
 }
 
