--- a/styles/components/_catalog-individual.scss
+++ b/styles/components/_catalog-individual.scss
@@ -10,7 +10,7 @@
 
     &__content {
         display: grid;
-        gap: 70px;
+        gap: 3%;
         grid-template-columns: 1fr 3fr;
         border-top: 1px solid #c2c2c2;
     }
