--- a/styles/components/_filter-modal.scss
+++ b/styles/components/_filter-modal.scss
@@ -31,7 +31,10 @@
 
     &__body {
         width: 50%;
-        height: 100vh;
+        height: 100%;
+        padding-bottom: 2rem;
+        overflow-y: auto;
+        overflow-x: hidden;
         background-color: #fff;
         transform: translateX(-100%);
         transition: all 0.5s ease 0s;
@@ -127,9 +130,8 @@
     }
 
     &__checkboxes {
-        height: 13rem;
+        min-height: 13rem;
         margin-left: 3rem;
-        overflow: scroll;
     }
 
     &__buttons {
@@ -171,11 +173,21 @@
     }
 }
 
+@media screen and(max-width:1100px) {
+    .filter-modal {
+        &__overlay {
+            top: 91px;
+        }
+    }
+}
 
 @media screen and(max-width:480px) {
     .filter-modal {
         &__body {
             width: 100%;
+        }
+        &__overlay {
+            top: 62px;
         }
 
         &__checkboxes {
