--- a/styles/main.css
+++ b/styles/main.css
@@ -1311,7 +1311,10 @@ main {
 
 .filter-modal__body {
   width: 50%;
-  height: 100vh;
+  height: 100%;
+  padding-bottom: 2rem;
+  overflow-y: auto;
+  overflow-x: hidden;
   background-color: #fff;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
@@ -1413,9 +1416,8 @@ main {
 }
 
 .filter-modal__checkboxes {
-  height: 13rem;
+  min-height: 13rem;
   margin-left: 3rem;
-  overflow: scroll;
 }
 
 .filter-modal__buttons {
@@ -1470,9 +1472,18 @@ main {
   background-color: #07c47f;
 }
 
+@media screen and (max-width: 1100px) {
+  .filter-modal__overlay {
+    top: 91px;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .filter-modal__body {
     width: 100%;
+  }
+  .filter-modal__overlay {
+    top: 62px;
   }
   .filter-modal__checkboxes {
     display: none;
