--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -156,8 +156,34 @@
     }
 }
 
+@media screen and(max-width: 1440px) {
+  .banner {
+    &__description {
+      margin: 0;
+    }
+    &__slide {
+      padding: 0 6rem;
+    }
+  }
+}
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1366px) {
+  .banner {
+    .swiper-pagination-custom {
+      left: 40%;
+    }
+  }
+}
+
+@media screen and(max-width: 1024px) {
+  .banner {
+    &__image-brand {
+      left: -17rem;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
   .banner {
 
     min-height: 50rem;
