--- a/styles/components/_brands.scss
+++ b/styles/components/_brands.scss
@@ -32,7 +32,7 @@
 
   &__btn-next {
     position: absolute;
-    right: -40px;
+    right: 0;
     color: #fff;
     &::after {
       font-size: 30px;
@@ -42,7 +42,7 @@
 
   &__btn-prev {
     position: absolute;
-    left: 276px;
+    left: 24%;
     color: #fff;
     &::after {
       font-size: 30px;
@@ -64,7 +64,15 @@
   }
 }
 
-@media screen and(max-width: 1100px) {
+@media screen and(max-width: 1024px) {
+  .brands {
+    &__btn-prev {
+      left: 31%;
+    }
+  }
+}
+
+@media screen and(max-width: 768px) {
   .brands {
     &__container {
       flex-direction: column;
