--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -88,7 +88,15 @@
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and(max-width: 1280px) {
+  .header {
+    &__nav {
+      gap: 3rem;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
   .header {
     min-height: 9rem;
 
@@ -141,6 +149,7 @@
     }
   }
 }
+
 
 @media screen and (max-width: 480px) {
   .header {
