--- a/styles/components/_main-container.scss
+++ b/styles/components/_main-container.scss
@@ -13,7 +13,39 @@ main {
   max-width: 1300px;
 }
 
-@media screen and(max-width: 1100px) {
+
+@media screen and(max-width: 1440px) {
+  .container {
+    max-width: 1370px;
+  }
+}
+
+@media screen and(max-width: 1367px) {
+  .container {
+    max-width: 1250px;
+  }
+}
+
+@media screen and(max-width: 1280px) {
+  .container {
+    max-width: 1250px;
+  }
+  .container-main {
+    max-width: 1250px;
+  }
+}
+
+@media screen and(max-width: 1024px) {
+  .container {
+    max-width: 995px;
+  }
+  .container-main {max-width: 995px;}
+  main {
+    margin-top: 150px;
+  }
+}
+
+@media screen and(max-width: 768px) {
   .container-main {
     max-width: 768px;
   }
