--- a/styles/components/_site-nav.scss
+++ b/styles/components/_site-nav.scss
@@ -1,20 +1,14 @@
 .site-nav {
   position: relative;
-  min-width: 70%;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  gap: 4rem;
 
   & span {
     height: 0.5rem;
     width: 0.5rem;
     border-radius: 50%;
     background-color: #c2c2c2;
-  }
-
-  &__icon-sale {
-    position: absolute;
-    left: 0;
   }
 
   &__link {
@@ -42,5 +36,11 @@
         text-decoration: underline;
       }
     }
+  }
+}
+
+@media screen and(max-width: 1024px) {
+  .site-nav {
+    gap: 3rem;
   }
 }
